--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ on:
     workflows: [Sync branch]
     types:
       - completed
+  workflow_dispatch: {}
 
 env:
   # Use docker.io for Docker Hub if empty
